--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@twa-dev/sdk": "^8.0.2",
     "framer-motion": "^12.15.0",
     "next": "15.3.2",
     "react": "^19.0.0",
