--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@twa-dev/sdk": "^8.0.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "next": "15.3.2",
     "react": "^19.0.0",
